Add some testing frameworks to build.gradle (for future use)