@@ -38,9 +38,16 @@ android {
     lintOptions {
         abortOnError false
     }
+    testOptions {
+        unitTests.all {
+            jvmArgs '-XX:MaxPermSize=256m'
+        }
+        unitTests.returnDefaultValues = true
+    }
 }
 
 dependencies {
+    // Android Support Libraries
     compile 'com.android.support:support-v4:23.3.0'
     compile 'com.android.support:appcompat-v7:23.3.0'
     compile 'com.android.support:preference-v14:23.3.0'
@@ -48,11 +55,17 @@ dependencies {
     compile 'com.android.support:cardview-v7:23.3.0'
     compile 'com.android.support:design:23.3.0'
     compile 'com.android.support:multidex:1.0.1'
+    // Google Cloud Messaging
     compile 'com.google.android.gms:play-services:8.4.0'
+    // Other libraries
     compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
     compile 'com.commit451:PhotoView:1.2.5'
     compile 'de.hdodenhof:circleimageview:2.0.0'
     compile 'com.android.volley:volley:1.0.0'
     compile 'com.google.code.gson:gson:2.4'
+
+    // Testing
+    testCompile 'junit:junit:4.12'
+    testCompile 'org.mockito:mockito-core:1.10.19'
 
 }
